--- a/powerdns-setup/config.env
+++ b/powerdns-setup/config.env
@@ -1,82 +1,46 @@
-# Centralized configuration for PowerDNS stack
-# Load this in all scripts using: set -a; source ./config.env; set +a
+# ================================
+# PowerDNS Automated Stack Config
+# ================================
+# Edit this file BEFORE running: sudo bash install.sh
+# Safe defaults are provided. Leave passwords empty to auto-generate.
 
-# General
-HOSTNAME=doovate-dns
+# --- Network and DNS ---
+# The IPv4 address of this server (used by nginx and UFW hints)
 DNS_SERVER_IP=192.168.24.60
-INTERNAL_NETWORK_CIDR=192.168.24.0/22
-VPN_NETWORK_CIDR=10.66.66.0/24
+# Internal LAN/CIDR allowed to query DNS and access WebUI
+INTERNAL_NETWORK=192.168.24.0/22
+# WireGuard VPN network/CIDR allowed to query DNS and access WebUI
+VPN_NETWORK=10.66.66.0/24
+# Internal DNS zone to create initially
 DNS_ZONE=doovate.com
 
-# Ports
-RECURSOR_PORT=53
-AUTHORITATIVE_PORT=5300
-PDNS_API_PORT=8081
-PDNSA_HTTP_PORT=9191
+# --- Public DNS forwarders ---
+DNS_FORWARDER_1=8.8.8.8
+DNS_FORWARDER_2=1.1.1.1
 
-# Forwarders for public domains
-FORWARDERS="8.8.8.8,1.1.1.1"
+# --- Ports (change only if conflicts) ---
+# Authoritative PDNS listens here (nginx/recursor do not use this port)
+PDNS_AUTH_PORT=5300
+# Recursor listens to all client queries here
+PDNS_RECURSOR_PORT=53
+# PowerDNS-Admin reverse-proxied HTTPS port
+WEBUI_PORT=9191
 
-# Database selection: POSTGRES or MYSQL (recommended: POSTGRES)
-DB_ENGINE=POSTGRES
+# --- Database (auto-generated if empty) ---
+# Supported: postgresql or mysql (default: postgresql)
+DB_TYPE=postgresql  # or mysql
+DB_NAME=powerdns
+DB_USER=pdns
+DB_PASSWORD=
 
-# PostgreSQL settings (used if DB_ENGINE=POSTGRES)
-PG_HOST=127.0.0.1
-PG_PORT=5432
-PG_SUPERUSER=postgres
-PG_SUPERPASS=""
-# Application DB/user for PowerDNS
-PG_PDNSURL="postgresql+psycopg2://pdns:pdns_pass@127.0.0.1:5432/pdns"
-PG_PDNSURL_PDNSADMIN="postgresql+psycopg2://pdnsadmin:pdnsadmin_pass@127.0.0.1:5432/pdnsadmin"
-PDNS_DB_NAME=pdns
-PDNS_DB_USER=pdns
-PDNS_DB_PASS=pdns_pass
-PDNSADMIN_DB_NAME=pdnsadmin
-PDNSADMIN_DB_USER=pdnsadmin
-PDNSADMIN_DB_PASS=pdnsadmin_pass
+# --- PowerDNS-Admin (auto-generated if empty) ---
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=
+ADMIN_EMAIL=admin@doovate.com
 
-# MySQL settings (used if DB_ENGINE=MYSQL)
-MYSQL_HOST=127.0.0.1
-MYSQL_PORT=3306
-MYSQL_ROOT_USER=root
-MYSQL_ROOT_PASS=""
-MYSQL_PDNSURL="mysql+pymysql://pdns:pdns_pass@127.0.0.1:3306/pdns"
-MYSQL_PDNSURL_PDNSADMIN="mysql+pymysql://pdnsadmin:pdnsadmin_pass@127.0.0.1:3306/pdnsadmin"
-
-# PowerDNS API
-PDNS_API_KEY="change_me_secure_api_key"
-
-# PowerDNS-Admin admin credentials
-PDNSA_ADMIN_USER=admin
-PDNSA_ADMIN_EMAIL=admin@doovate.com
-PDNSA_ADMIN_PASSWORD="ChangeMe_StrongPwd1!"
-
-# TLS/SSL
-ENABLE_LETSENCRYPT=false
-PDNSA_FQDN=dns.doovate.com
-SELF_SIGNED_COUNTRY=ES
-SELF_SIGNED_STATE=Madrid
-SELF_SIGNED_LOCALITY=Madrid
-SELF_SIGNED_ORG=Doovate
-SELF_SIGNED_OU=IT
-
-# Nginx
-NGINX_HTTP_PORT=80
-NGINX_HTTPS_PORT=443
-
-# File paths
-PDNSA_BASE_DIR=/opt/powerdns-admin
-PDNSA_VENV_DIR=/opt/powerdns-admin/venv
-PDNSA_LOG_DIR=/var/log/powerdns-admin
-
-# Backup paths
-BACKUP_DIR=./backups
-
-# UFW firewall
-ENABLE_UFW=true
-
-# Rate limiting (nginx)
-NGINX_RATE_LIMIT=10r/s
-
-# Idempotency / safety
-AUTO_APPROVE=false
+# --- Initial DNS records ---
+# Format: <host-without-zone>:<IPv4>
+# Examples below will create A records under the DNS_ZONE
+DNS_RECORD_1=dv-vpn:192.168.24.20
+DNS_RECORD_2=sv-vpn:192.168.24.50
+DNS_RECORD_3=dns:192.168.24.60
