--- a/powerdns-setup/configs/pdns.conf.template
+++ b/powerdns-setup/configs/pdns.conf.template
@@ -1,33 +1,44 @@
 # PowerDNS Authoritative configuration (template)
-# Generated from config.env
+# Rendered by install.sh using values from config.env
 
 setuid=pdns
 setgid=pdns
-local-address=127.0.0.1
-local-port={{AUTHORITATIVE_PORT}}
 
-# Launch gpgsql backend (PostgreSQL) by default
+# Listen on all interfaces, custom port
+local-address=0.0.0.0
+local-port={{PDNS_AUTH_PORT}}
+
+# Backend: PostgreSQL or MySQL (PostgreSQL by defecto)
 launch=gpgsql
+# For MySQL use: launch=gmysql
 
-# gpgsql settings
+# PostgreSQL settings
 gpgsql-host=127.0.0.1
-gpgsql-port={{PG_PORT}}
-gpgsql-dbname={{PDNS_DB_NAME}}
-gpgsql-user={{PDNS_DB_USER}}
-gpgsql-password={{PDNS_DB_PASS}}
+gpgsql-port=5432
+gpgsql-dbname={{DB_NAME}}
+gpgsql-user={{DB_USER}}
+gpgsql-password={{DB_PASSWORD}}
 
-# API for PowerDNS-Admin and automation
+# MySQL settings (ignored if using PostgreSQL)
+gmysql-host=127.0.0.1
+gmysql-port=3306
+gmysql-dbname={{DB_NAME}}
+gmysql-user={{DB_USER}}
+gmysql-password={{DB_PASSWORD}}
+
+daemon=yes
+master=no
+slave=no
+version-string=powerdns
+
+# API / Webserver
 api=yes
 api-key={{PDNS_API_KEY}}
 webserver=yes
 webserver-address=127.0.0.1
-webserver-port={{PDNS_API_PORT}}
+webserver-port=8081
 
-# Security
-allow-axfr-ips={{INTERNAL_NETWORK_CIDR}},{{VPN_NETWORK_CIDR}}
-allow-dnsupdate-from={{INTERNAL_NETWORK_CIDR}},{{VPN_NETWORK_CIDR}}
-
-# Performance and logging
+# Security / Misc
+disable-axfr=yes
+allow-axfr-ips=
 loglevel=4
-cache-ttl=60
-query-logging=no
