--- a/powerdns-setup/config.env
+++ b/powerdns-setup/config.env
@@ -1,46 +1,76 @@
-# ================================
-# PowerDNS Automated Stack Config
-# ================================
-# Edit this file BEFORE running: sudo bash install.sh
-# Safe defaults are provided. Leave passwords empty to auto-generate.
+# ============================================
+# CONFIGURACIÓN DE RED
+# ============================================
+# IP donde escuchará el servidor DNS
+DNS_SERVER_IP=192.168.25.60
 
-# --- Network and DNS ---
-# The IPv4 address of this server (used by nginx and UFW hints)
-DNS_SERVER_IP=192.168.24.60
-# Internal LAN/CIDR allowed to query DNS and access WebUI
+# Redes que pueden hacer consultas DNS
 INTERNAL_NETWORK=192.168.24.0/22
-# WireGuard VPN network/CIDR allowed to query DNS and access WebUI
 VPN_NETWORK=10.66.66.0/24
-# Internal DNS zone to create initially
+
+# Zona DNS interna
 DNS_ZONE=doovate.com
 
-# --- Public DNS forwarders ---
+# ============================================
+# FORWARDERS DNS PÚBLICOS
+# ============================================
 DNS_FORWARDER_1=8.8.8.8
 DNS_FORWARDER_2=1.1.1.1
 
-# --- Ports (change only if conflicts) ---
-# Authoritative PDNS listens here (nginx/recursor do not use this port)
+# ============================================
+# PUERTOS (cambiar solo si hay conflictos)
+# ============================================
 PDNS_AUTH_PORT=5300
-# Recursor listens to all client queries here
 PDNS_RECURSOR_PORT=53
-# PowerDNS-Admin reverse-proxied HTTPS port
 WEBUI_PORT=9191
 
-# --- Database (auto-generated if empty) ---
-# Supported: postgresql or mysql (default: postgresql)
-DB_TYPE=postgresql  # or mysql
+# ============================================
+# BASE DE DATOS
+# ============================================
+# Tipo: postgresql o mysql
+DB_TYPE=postgresql
+
+# Nombre de la base de datos
 DB_NAME=powerdns
+
+# Usuario de la base de datos
 DB_USER=pdns
+
+# Contraseña (dejar vacío para generar automáticamente)
 DB_PASSWORD=
 
-# --- PowerDNS-Admin (auto-generated if empty) ---
+# ============================================
+# POWERDNS-ADMIN
+# ============================================
+# Usuario administrador
 ADMIN_USERNAME=admin
+
+# Contraseña (dejar vacío para generar automáticamente)
 ADMIN_PASSWORD=
+
+# Email del administrador
 ADMIN_EMAIL=admin@doovate.com
 
-# --- Initial DNS records ---
-# Format: <host-without-zone>:<IPv4>
-# Examples below will create A records under the DNS_ZONE
+# ============================================
+# REGISTROS DNS INICIALES
+# ============================================
+# Formato: nombre:ip
 DNS_RECORD_1=dv-vpn:192.168.24.20
 DNS_RECORD_2=sv-vpn:192.168.24.50
-DNS_RECORD_3=dns:192.168.24.60
+DNS_RECORD_3=dns:192.168.25.60
+
+# ============================================
+# OPCIONES DE INSTALACIÓN
+# ============================================
+# Pausar entre pasos (true/false)
+INTERACTIVE_MODE=true
+
+# Mostrar comandos antes de ejecutarlos
+VERBOSE_MODE=true
+
+# Guardar logs detallados
+ENABLE_LOGGING=true
+LOG_FILE=/var/log/powerdns-setup.log
+
+# Modo seco (mostrar sin ejecutar)
+DRY_RUN=false
