--- a/powerdns-setup/configs/nginx.conf.template
+++ b/powerdns-setup/configs/nginx.conf.template
@@ -1,38 +1,32 @@
-# nginx reverse proxy for PowerDNS-Admin (template)
-# Rendered by install.sh using values from config.env
+# Nginx reverse proxy for PowerDNS-Admin (template)
+# Managed by powerdns-setup
 
-user www-data;
-worker_processes auto;
-error_log /var/log/nginx/error.log warn;
-pid /run/nginx.pid;
+upstream powerdns_admin {
+    server 127.0.0.1:9190;
+}
 
-events { worker_connections 1024; }
+server {
+    listen 80;
+    server_name _;
+    return 301 https://$host:{{WEBUI_PORT}}$request_uri;
+}
 
-http {
-  log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                  '$status $body_bytes_sent "$http_referer" '
-                  '"$http_user_agent" "$http_x_forwarded_for"';
-  access_log /var/log/nginx/access.log main;
-  sendfile on;
-  keepalive_timeout 65;
-  server_tokens off;
-
-  server {
+server {
     listen {{WEBUI_PORT}} ssl;
     server_name _;
 
-    ssl_certificate     /etc/nginx/ssl/pdns-admin.crt;
-    ssl_certificate_key /etc/nginx/ssl/pdns-admin.key;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_certificate     /etc/nginx/ssl/powerdns-admin.crt;
+    ssl_certificate_key /etc/nginx/ssl/powerdns-admin.key;
+
+    location /static/ {
+        alias /opt/powerdns-admin/powerdnsadmin/static/;
+    }
 
     location / {
-      proxy_pass         http://127.0.0.1:9190; # gunicorn backend
-      proxy_http_version 1.1;
-      proxy_set_header   Host $host;
-      proxy_set_header   X-Real-IP $remote_addr;
-      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://powerdns_admin;
     }
-  }
 }
