--- a/powerdns-setup/configs/zones/doovate.com.zone.template
+++ b/powerdns-setup/configs/zones/doovate.com.zone.template
@@ -1,15 +1,14 @@
-$ORIGIN doovate.com.
+$ORIGIN {{DNS_ZONE}}.
 $TTL 3600
-@   IN SOA dns.doovate.com. admin.doovate.com. (
+@   IN  SOA dns.{{DNS_ZONE}}. admin.{{DNS_ZONE}}. (
         2025010101 ; serial
         3600       ; refresh
         900        ; retry
-        1209600    ; expire
-        300 )      ; minimum
+        604800     ; expire
+        86400 )    ; minimum
 
-@       IN NS dns.doovate.com.
-dns     IN A 192.168.24.60
+    IN  NS  dns.{{DNS_ZONE}}.
 
-; Sample records (will be ensured by installer too)
-dv-vpn  IN A 192.168.24.20
-sv-vpn  IN A 192.168.24.50
+dv-vpn  IN  A   192.168.24.20
+sv-vpn  IN  A   192.168.24.50
+dns     IN  A   {{DNS_SERVER_IP}}
