--- a/powerdns-setup/config.env
+++ b/powerdns-setup/config.env
@@ -1,14 +1,9 @@
 # ============================================
 # CONFIGURACIÓN DE RED
 # ============================================
-# IP donde escuchará el servidor DNS
 DNS_SERVER_IP=192.168.25.60
-
-# Redes que pueden hacer consultas DNS
 INTERNAL_NETWORK=192.168.24.0/22
 VPN_NETWORK=10.66.66.0/24
-
-# Zona DNS interna
 DNS_ZONE=doovate.com
 
 # ============================================
@@ -18,59 +13,61 @@ DNS_FORWARDER_1=8.8.8.8
 DNS_FORWARDER_2=1.1.1.1
 
 # ============================================
-# PUERTOS (cambiar solo si hay conflictos)
+# PUERTOS
 # ============================================
 PDNS_AUTH_PORT=5300
 PDNS_RECURSOR_PORT=53
 WEBUI_PORT=9191
+GUNICORN_PORT=8000
+NGINX_HTTPS_PORT=443
 
 # ============================================
 # BASE DE DATOS
 # ============================================
-# Tipo: postgresql o mysql
-DB_TYPE=postgresql
-
-# Nombre de la base de datos
+DB_TYPE=mysql
+DB_HOST=localhost
+DB_PORT=3306
 DB_NAME=powerdns
-
-# Usuario de la base de datos
 DB_USER=pdns
-
-# Contraseña (dejar vacío para generar automáticamente)
 DB_PASSWORD=
 
 # ============================================
 # POWERDNS-ADMIN
 # ============================================
-# Usuario administrador
 ADMIN_USERNAME=admin
-
-# Contraseña (dejar vacío para generar automáticamente)
 ADMIN_PASSWORD=
-
-# Email del administrador
 ADMIN_EMAIL=admin@doovate.com
+PDNS_ADMIN_PATH=/opt/web/powerdns-admin
 
 # ============================================
 # REGISTROS DNS INICIALES
+# Formato: "host:TYPE:VALUE"
 # ============================================
-# Formato: nombre:ip
-DNS_RECORD_1=dv-vpn:192.168.24.20
-DNS_RECORD_2=sv-vpn:192.168.24.50
-DNS_RECORD_3=dns:192.168.25.60
+DNS_RECORDS=(
+    "dv-vpn:A:192.168.24.20"
+    "sv-vpn:A:192.168.24.50"
+    "dns:A:192.168.25.60"
+)
+
+# ============================================
+# CERTIFICADO SSL
+# ============================================
+SSL_TYPE=selfsigned
+SSL_DOMAIN=
+SSL_EMAIL=
 
 # ============================================
 # OPCIONES DE INSTALACIÓN
 # ============================================
-# Pausar entre pasos (true/false)
 INTERACTIVE_MODE=true
-
-# Mostrar comandos antes de ejecutarlos
 VERBOSE_MODE=true
-
-# Guardar logs detallados
 ENABLE_LOGGING=true
 LOG_FILE=/var/log/powerdns-setup.log
-
-# Modo seco (mostrar sin ejecutar)
+PYTHON_VERSION=3.12
 DRY_RUN=false
+
+# ============================================
+# FIREWALL
+# ============================================
+ENABLE_FIREWALL=true
+SSH_PORT=22
