--- a/powerdns-setup/config.env
+++ b/powerdns-setup/config.env
@@ -29,13 +29,13 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=powerdns
 DB_USER=pdns
-DB_PASSWORD=
+DB_PASSWORD=11vicented
 
 # ============================================
 # POWERDNS-ADMIN
 # ============================================
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=
+ADMIN_PASSWORD=11vicented
 ADMIN_EMAIL=admin@doovate.com
 PDNS_ADMIN_PATH=/opt/web/powerdns-admin
 
